# mx-uvp-1

./: README.md  sk.txt
OTHRES/a1/: argus.py  pyproject.toml
OTHRES/a1/modules/: data_leak.py
TUTA/: README.MD
TUTA/ap1/: hello.py  pyproject.toml
TUTA/t1/src/: p1.py  w1.py
TUTA/t2/: README.md  panty.py  pyproject.toml
TUTA/t3/: README.md  panty.py  pyproject.toml
TUTA/t3/src/: com1.py
TUTA/typer_1/: hello.py  output.txt  panty.py  pyproject.toml
WOKZ/: README.MD
WOKZ/app1/: pyproject.toml
WOKZ/app2/: pyproject.toml
WOKZ/k1/: hello.py  pyproject.toml
WOKZ/l1/: pyproject.toml
WOKZ/l1/src/l1/: __init__.py
WOKZ/pak1/: pyproject.toml
WOKZ/pak1/src/pak1/: __init__.py
mx/: lix.fish
