[project]
name = "a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.9",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "dnspython>=2.7.0",
    "jinja2>=3.1.4",
    "pyopenssl>=24.2.1",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "urllib3>=2.2.3",
    "whois>=1.20240129.2",
]
